--- a/src/config/mysql.ini
+++ b/src/config/mysql.ini
@@ -1,6 +1,6 @@
 type = mysql
-dbname = marmitas
-host = 127.0.0.1
-port = 3306
-password = @000000
-username = root
+dbname = 
+host = 
+port = 
+password = 
+username = 
